# QtUiAssessment

./: CMakeLists.txt  Main.qml  avatarprovider.cpp  avatarprovider.h  chatmodel.cpp  chatmodel.h  main.cpp  profilemodel.cpp  profilemodel.h  res.qrc
avatars/: 2  5  t1
components/: AwesomeIconButton.qml  Badge.qml  ChatPost.qml  ChatView.qml  ExpandablePanel.qml  SidebarButton.qml  UserSideMenu.qml
fontawesome/: fontawesome.cpp  fontawesome.h  fontawesome.pri  fontawesome.qrc  fonticons.h
fontawesome/tool/: _fontawesome_defines.h  _fontawesome_qml.h  _fontawesome_undefs.h  generate  test.cpp
icons/: 1
